# daegu_modern_heritage

./: app.py  pyproject.toml  server.py
frontend/: index.html  package.json
frontend/src/: App.tsx
